--- a/package.json
+++ b/package.json
@@ -2,7 +2,6 @@
   "name": "mk3",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "scripts": {
     "start": "cross-env SERVE=true webpack serve",
     "build": "webpack",
@@ -25,26 +24,33 @@
     "@babel/preset-react": "^7.16.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@types/react": "^18.2.21",
+    "autoprefixer": "^10.4.15",
     "babel-loader": "^8.2.3",
     "cross-env": "^7.0.3",
-    "css-loader": "^6.5.1",
+    "css-loader": "^6.8.1",
     "html-loader": "^3.0.1",
     "html-webpack-plugin": "^5.5.0",
-    "mini-css-extract-plugin": "^2.4.5",
-    "postcss": "^8.4.5",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.29",
+    "postcss-cli": "^10.1.0",
     "postcss-loader": "^6.2.1",
-    "postcss-preset-env": "^7.0.2",
+    "postcss-preset-env": "^7.8.3",
     "react-refresh": "^0.11.0",
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.3",
     "ts-loader": "^9.4.4",
     "typescript": "^5.1.6",
-    "webpack": "^5.65.0",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.6.0"
+    "webpack": "^5.88.2",
+    "webpack-cli": "^4.10.0",
+    "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "immutable": "4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-redux": "7.2.8",
+    "redux": "^4.1.2"
   }
 }
