--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "postcss-cli": "^10.1.0",
     "postcss-loader": "^6.2.1",
     "postcss-preset-env": "^7.8.3",
+    "prettier": "3.0.3",
     "react-refresh": "^0.11.0",
     "sass": "^1.45.0",
     "sass-loader": "^12.4.0",
@@ -47,10 +48,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
-    "immutable": "4.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-redux": "7.2.8",
-    "redux": "^4.1.2"
+    "react-dom": "^17.0.2"
   }
 }
